# thalasshome-api

./: .gcloudignore  .gitignore  .pre-commit-config.yaml  DEV.md  README.md  app.yaml  pyproject.toml  requirements.txt  sql_migration_bootstrapper.py  tmp.c  todos.py  todos.txt
.github/workflows/: ci.yml  python-tests.yml
dashboard/: __init__.py  constants.py  container.py  dashboard.yaml  main.py  registerer.py  run.py
dashboard/db/: base.py  client.py  client_wrapper.py  create_users_table.sql  functions.sql  insert_initial_users.sql  prod_client.py  test_client.py  utils.py
dashboard/db/create/: insert_initial_data.sql  locations.sql  orders.sql  users.sql
dashboard/lib/: admin.py  auth.py  creation_order.py  delivery_men.py  hooks.py  locations.py  logging_config.py  master.py  notifier.py  services.py  splash.py
dashboard/lib/admin/: routes.py
dashboard/lib/notifier/: notifier.py
dashboard/lib/order/: order.py  schemas.py
dashboard/lib/parser/: creation_order.py
dashboard/lib/tests/: __init__.py  conftest.py  test_db_containers.py  test_delivery_men.py  test_notifications.py  test_notifier.py  test_services.py
dashboard/lib/utils/: utils.py
dashboard/static/: delivery_men.css  head.js  login.css  script.js
dashboard/static/css/: admin.css
dashboard/templates/: admin.html  delivery_men.html  head.html  index.html  login.html  provider_notification.txt  signup.html
dashboard/templates/admin/: head.html  index.html
dashboard/templates/common/: head.html
dashboard/templates/notification/: accept_command.html  command_accepted.txt  confirm_accept.html  notify_admin.html  notify_customer.html  provider_notification.html  provider_notification.txt
dashboard/tests/: conftest.py
dashboard/tests/lib/: test_services.py
dashboard/utils/: dev.txt
dashboard/utils/maps/: maps.py
dashboard/utils/orders/: add_order.py  clean_orders.py  get_orders.py  sample.py
env/: __init__.py  env.sh  example.yaml  local_env.sh
websocket/: .gcloudignore  ws.py
(+7 files in other folders)
