[tool.poetry]
name = "thalasshome-api"
version = "0.1.0"
description = "DEV"
authors = ["Sasha Keskin <skeskin@bwi.earth>", "Mathias Ducatillon"]
readme = "README.md"
packages = [{include = "dashboard"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.1.0"
gunicorn = "^23.0.0"
pyyaml = "^6.0.2"
flask-cors = "^5.0.1"
supabase = "^2.13.0"
geopy = "^2.4.1"
requests = "^2.32.3"
jinja2 = "^3.1.6"


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.1.0"
black = "^25.1.0"
isort = "^6.0.1"
pytest = "^8.0.0"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"
testcontainers = "^3.4.2"
psycopg2-binary = "^2.9.5"
sqlalchemy = "^2.0.39"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
